--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Self Driving Car</title>
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-  <img src="https://illustoon.com/photo/1742.png"/>
-  <button id="car"></button>
+  <div>
+    <h1> A Self-Driving Car</h1>
+    <img id="car" src="https://illustoon.com/photo/1742.png"/>
+
+  </div>
+
+  
+  
 </body>
 <script src="js/index.js"></script>
 </html>
