--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
   <div>
     <h1> A Self-Driving Car</h1>
-    <img id="car" src="https://illustoon.com/photo/1742.png"/>
+    <img id="car" src="https://media.giphy.com/media/NFfvmzF9PwYSI/giphy.gif"/>
 
   </div>
 
-  
-  
+
+
 </body>
 <script src="js/index.js"></script>
 </html>
